data/all_generated_tests/raw_wast_tests/block_TypeMismatchinControlFlowInstructions_2576.wast
;; 7. **Test Description**:    Design a `block` that produces a float (`f32`) but insert a branch (`br`) that erroneously restores an `i32` after unwinding the block. Verify type mismatch detection.    **Constraint**: Restored stack after a branch must respect block type constraints.    **Relation**: Ensures runtime branches uphold consistent type constraints.

(assert_invalid
  (module (func $block_type_mismatch (result f32)
    (block (result f32) 
      (br 0 (i32.const 42)) 
      (f32.const 3.14))
  ))
  "type mismatch"
)